#7201 [Scrumwise item #7201]: [BUG] Tela de recuperar senha com layout bugado

--- a/source/Presentation/Web/PlataformaRio2C.Web.Site/Assets/css/myrio2c.common.css
+++ b/source/Presentation/Web/PlataformaRio2C.Web.Site/Assets/css/myrio2c.common.css
@@ -96,12 +96,12 @@ section.footer .social-networks a{
 /*
     Login
 */
-.kt-login__body {
+.kt-login__body.with-message {
     flex-direction: column !important;
     height:unset !important;
 }
 
-    .kt-login__body .kt-iconbox {
+    .kt-login__body.with-message .kt-iconbox {
         margin-bottom: 80px;
     }
 
